plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.studyspaces'
version = '0.0.1-SNAPSHOT'
description = 'spacefinder'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
	// --- Spring Boot Core & Web ---
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

	// --- Data & Database ---
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// --- Machine Learning (Smile) ---
	implementation 'com.github.haifengl:smile-core:5.2.0'
	implementation 'com.github.haifengl:smile-deep:5.2.0'

	// --- Utilities & Configuration ---
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'

	// --- Lombok (Annotation Processing) ---
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// --- Testing ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.7.2'
}

tasks.named('test') {
    useJUnitPlatform()
	environment System.getenv()
}

test{
	useJUnitPlatform()
	environment System.getenv()
}
